# adzuna-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  server.py  smithery.yaml
.github/workflows/: ci.yml
tests/: __init__.py  test_server.py
