[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adzuna-mcp"
version = "0.1.0"
description = "MCP server for Adzuna Job Search API - search jobs, analyze salaries, and research employers"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Folarin Akinloye" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "adzuna",
    "job-search",
    "jobs",
    "salary",
    "ai",
    "llm",
    "claude",
    "fastmcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0,<3",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/folarinakinloye/adzuna-mcp"
Repository = "https://github.com/folarinakinloye/adzuna-mcp"
Issues = "https://github.com/folarinakinloye/adzuna-mcp/issues"

[project.scripts]
adzuna-mcp = "server:main"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]

[tool.hatch.build.targets.sdist]
only-include = ["server.py", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
